examples/k8s/base/astronauts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: astronauts
  name: astronauts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astronauts
  strategy: {}
  template:
    metadata:
      labels:
        app: astronauts
    spec:
      containers:
        - image: astronauts
          name: astronauts
          resources: {}
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: astronauts
spec:
  selector:
    app: astronauts
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
